--- a/SQL_Bites_Training_Lesson_1/SQLBites_Lesson1.ipynb
+++ b/SQL_Bites_Training_Lesson_1/SQLBites_Lesson1.ipynb
@@ -62,16 +62,13 @@
         {
             "cell_type": "code",
             "source": [
-                "USE SQL_AdventureWork_SB;\r\n",
-                "GO\r\n",
-                "\r\n",
                 "/****** Object:  Table [dbo].[Orders]    Script Date: 20/04/2018 14:33:47 ******/\r\n",
                 "SET ANSI_NULLS ON\r\n",
                 "GO\r\n",
                 "SET QUOTED_IDENTIFIER ON\r\n",
                 "GO\r\n",
                 "\r\n",
-                "CREATE TABLE [#Orders](\r\n",
+                "CREATE TABLE [Orders](\r\n",
                 "\t[ID] [int] NULL,\r\n",
                 "\t[Item] [nvarchar](50) NULL,\r\n",
                 "\t[UserID] [int] NULL\r\n",
@@ -108,14 +105,23 @@
                 "INSERT [dbo].[Users] ([ID], [Name]) VALUES (6, N'Praveen')"
             ],
             "metadata": {
-                "azdata_cell_guid": "3186226d-a5de-4a26-ade5-2229ca682ede"
+                "azdata_cell_guid": "3186226d-a5de-4a26-ade5-2229ca682ede",
+                "tags": []
             },
             "outputs": [
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 40508, Level 16, State 1, Line 1\r\nUSE statement is not supported to switch between databases. Use a new connection to connect to a different database.",
-                    "ename": "",
-                    "traceback": []
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
@@ -132,12 +138,6 @@
                     "metadata": {}
                 },
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 262, Level 14, State 1, Line 13\r\nCREATE TABLE permission denied in database 'AdventureWorks'.",
-                    "ename": "",
-                    "traceback": []
-                },
-                {
                     "output_type": "display_data",
                     "data": {
                         "text/html": "Commands completed successfully."
@@ -152,26 +152,112 @@
                     "metadata": {}
                 },
                 {
-                    "output_type": "error",
-                    "evalue": "Msg 262, Level 14, State 1, Line 28\r\nCREATE TABLE permission denied in database 'AdventureWorks'.",
-                    "ename": "",
-                    "traceback": []
-                },
-                {
-                    "output_type": "error",
-                    "evalue": "Msg 208, Level 16, State 1, Line 34\r\nInvalid object name 'dbo.Orders'.",
-                    "ename": "",
-                    "traceback": []
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.780"
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.290"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 5
         }
     ]
 }
